[package]
name = "markx"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["MARK-X reference implementation"]
description = "Reference implementation of the MARK-X migration-aware authenticated re-key protocol"
license = "Apache-2.0 OR MIT"

[dependencies]
# Real ML-KEM (FIPS 203) -- FFI to PQClean reference implementation
pqcrypto-mlkem = "=0.1.0"
pqcrypto-traits = "0.3"

# Real ECDSA over P-256 (FIPS 186-5)
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["der"] }

# Hashing and HKDF (modelled as ROM in proofs)
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"

# CSPRNG plumbing
rand_core = "0.6"
rand = "0.8"

# Hex for tests and diagnostics
hex = "0.4"

# Pinned transitive: base64ct >=1.7 requires edition2024 / Rust 1.85
base64ct = "=1.6.0"

[dev-dependencies]
hex-literal = "0.4"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "plotters"] }

# Microbenchmarks of MARK-X protocol phases (axis 1).
# Run with:  cargo bench --bench markx_phases
[[bench]]
name = "markx_phases"
harness = false

# Crypto-equivalent simulation of a TLS 1.3 hybrid handshake, used as
# the baseline against which MARK-X migration is compared.
# Run with:  cargo bench --bench baseline_handshake
[[bench]]
name = "baseline_handshake"
harness = false

# Direct side-by-side: MARK-X migration vs. full re-handshake.
# Run with:  cargo bench --bench compare_migration
[[bench]]
name = "compare_migration"
harness = false

[profile.release]
opt-level = 3
lto = "thin"

[profile.test]
opt-level = 1
